[project]
name = "ai-sample"
version = "0.1.0"
description = "A FastAPI application with LangChain integration"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langchain-core",
    "azure-identity",
    "python-dotenv",
    "markdown2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/yourusername/django-ogf"
Repository = "https://github.com/yourusername/django-ogf"
