[project]
name = "ai-sample"
version = "0.1.0"
description = "A FastAPI application with LangChain integration"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "langchain",
    "langchain-openai",
    "langchain-community",
    "langchain-core",
    "azure-identity",
    "python-dotenv",
    "markdown2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
